# poc-automacao-ccm-nfse

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: analise-poc-automacao-ccm-nfse.md  decisoes-tecnicas.md  entrega_desafio_tecnico.docx
entrega_final/docs/: decisoes_tecnicas.md  investigacoes_e_entrega.md
entrega_final/resultados/: relatorio_final_entrega_20260620.html  resultado_final_entrega_20260620.xlsx
input/: janabril2026_amostra_5x5.xlsx
output/: relatorio_20260618_134723.html  resultado_20260617_134707.xlsx  resultado_20260617_135530.xlsx  resultado_20260617_145153.xlsx  resultado_20260617_145438.xlsx  resultado_20260617_153701.xlsx  resultado_20260617_153840.xlsx  resultado_20260617_161921.xlsx  resultado_20260618_121642.xlsx  resultado_20260618_134522.xlsx
scripts/: demo_sefin.py  gerar_documento_entrega.py
src/: database.py  excel_handler.py  main.py  models.py  pipeline.py  report.py
src/browser/: playwright_runner.py
src/connectors/: barueri.py  base.py  belo_horizonte.py  nfse_nacional.py  nova_lima.py  porto_alegre.py  rio_de_janeiro.py
src/services/: bh_fic.py  captcha_solver.py  cnpj_lookup.py  document_builder.py  nfse_municipal.py  poa_siat.py  (+4 more)
tests/: test_bh_fic.py  test_captcha_solver.py  test_cnpj.py  test_cnpj_lookup.py  test_document_builder.py  test_excel_handler.py  test_fiscal_keys.py  test_models.py  test_nfse_municipal.py  test_nfse_nacional_download.py  test_nova_lima_cadastro.py  test_sefin_nacional.py  test_success_criteria.py
(+24 files in other folders)
