[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poc-automacao-ccm-nfse"
version = "0.1.0"
description = "POC de automação fiscal: consulta de CCM e download de documentos NFS-e por município"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "httpx>=0.27",
    "tenacity>=8.3",
    "loguru>=0.7",
    "typer>=0.12",
    "playwright>=1.44",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.21",
]

[project.scripts]
ccm-nfse = "src.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
